project(aces_super_instructions_library)


# Quantum Methods
set(QM_SOURCE_FILES
    aoladder_contraction.F;
    int_gen_parms.hf;
    sip_interface.hf;
    check_dconf.F;
    imemory.h;
    set_flags2.f;
    drop_core_in_sip.F;
    excited/cis_unit_guess.F;
    excited/a4_1hp_guess.F;
    excited/a4_reord_eigs.F;
    excited/a4_select_max.F;
    scf/a4_david_damp_factor.F;
    scf/a4_get_init_occupation.F;
    scf/a4_return_occupation.F;
    scf/a4_scf_atom.F;
    scf/a4_dscale.F;
    qm-generic/set_ijk_aaa.F;
    qm-generic/set_ijk_aab.F;
    qm-generic/energy_ty_denominator_rhf.F;
    qm-generic/energy_denominator_rhf.F;
    qm-generic/energy_numerator_rhf.F;
    qm-generic/energy_denominator.F;
    qm-generic/energy_udenominator.F;
    utility/form_diagonal_unit_matrix.F;
    utility/return_diagonal.F;
    utility/print_block_and_index.F;
    utility/inverse_lu_decomposition.F;
    utility/lu_decomposition.F;
    utility/return_diagonal_elements.F;
    utility/anti_symm_o.F;
    utility/anti_symm_v.F;
    utility/invert_diagonal.F;
    utility/invert_diagonal_asym.F;
    utility/eigen_calc.F;
    utility/eigen_calc_sqr_inv.F;
    utility/gen_eigen_calc.F;
    utility/form_R.F ;
    utility/stripi.F;
    utility/compute_diis.F;
    utility/return_sval.F;
    utility/remove_diagonal_elements.F;
    utility/cwork0222.F;
    utility/a4_xgeev.F;
    mcpt-fragment/set_frag.F;
    mcpt-fragment/scf_atom_lowmem.F;
    mcpt-fragment/compute_int_scratchmem_lowmem.F;
    mcpt-fragment/compute_xyz_batch.F;
    mcpt-fragment/frag_index_range.F;
    mcpt-fragment/place_scratch.F;
    mcpt-fragment/compute_return_h1_frag.F;
    mcpt-fragment/return_pairs.F;
    mcpt-fragment/compute_pair_nn.F;
    mcpt-fragment/return_vpq.F;
    mcpt-fragment/compute_moi_nn_repulsion.F;
    mcpt-fragment/compute_h1_moi.F;
    mcpt-fragment/compute_ovl_moi.F;
    direct_integral/uintegrals.F;
    direct_integral/move_integrals.f;
    direct_integral/pack_coeffs.f;
    direct_integral/lookup_shell.f;
    direct_integral/pack_coeffs_oed.f;
    direct_integral/compute_return_h1.F;
    direct_integral/compute_return_ovl.F;
    direct_integral/return_h1.F;
    direct_integral/return_ovl.F;
    direct_integral/compute_int_scratchmem.F;
    direct_integral/compute_nn_repulsion.F;
    direct_integral/compute_aabb_batch.F;
    direct_integral/compute_integral_batch.F;
    direct_integral/compute_dipole_integrals.F;
    direct_integral/erd_scratch_mem_calc.F;
    direct_integral/compute_ubatch1.F;
    direct_integral/compute_ubatch2.F;
    direct_integral/compute_ubatch3.F;
    direct_integral/compute_ubatch4.F;
    direct_integral/compute_ubatch6.F;
    direct_integral/compute_ubatch7.F;
    direct_integral/compute_ubatch8.F;
    direct_integral/compute_uintegrals1.F;
    direct_integral/compute_uintegrals2.F;
    direct_integral/compute_uintegrals3.F;
    direct_integral/compute_uintegrals4.F;
    direct_integral/compute_uintegrals6.F;
    direct_integral/compute_uintegrals7.F;
    direct_integral/compute_uintegrals8.F;
    direct_integral/return_1el_ecp_ints.F;
    direct_integral/compute_return_1el_ecp_ints.F;
    direct_integral/return_1el_grdints.F;
    direct_integral/compute_return_1el_grdints.F;
    direct_integral/return_1el_gradient.F;
    direct_integral/compute_return_1el_gradient.F;
    direct_integral/return_2el_grdints.F;
    direct_integral/compute_return_2el_grdints.F;
    direct_integral/return_kin_ovl_hessints.F;
    direct_integral/compute_return_kin_ovl_hessints.F;
    direct_integral/return_nai_hessints.F;
    direct_integral/compute_return_nai_hessints.F;
    direct_integral/compute_return_2el_hessian.F;
    direct_integral/return_2el_hessian.F;
    direct_integral/return_2el_gradient.F;
    direct_integral/compute_nn_repulsion_grad.F;
    erd/erd__ctr_tu_expand.f;
    erd/erd__ctr_4index_reorder.f;
    erd/erd__spherical_transform.f;
    erd/erd__rys_2_roots_weights.f;
    erd/erd__memory_eri_derv_batch.f;
    erd/erd__derv_int2d_to_abc0.f;
    erd/erd__ssss_pcgto_block.f;
    erd/erd__memory_hrr_correction.f;
    erd/erd__derv_def_blocks.f;
    erd/erd__1111_def_blocks.f;
    erd/erd__ctr_1st_half.f;
    erd/erd__sspp_pcgto_block.f;
    erd/erd__memory_derv_csgto.f;
    erd/erd__rys_3_roots_weights.f;
    erd/erd__2d_atom_pq_integrals.f;
    erd/erd__2d_derv_pcd_integrals.f;
    erd/erd__derv_int2d_to_ab00.f;
    erd/erd__e0f0_pcgto_block.f;
    erd/erd__rys_x_roots_weights.f;
    erd/erd__atom_int2d_to_e000.f;
    erd/erd__2d_derv_abcd_integrals.f;
    erd/erd__set_derv_sequence.f;
    erd/erd__xyz_to_ry_matrix.f;
    erd/erd__ctr_rs_expand.f;
    erd/erd__prepare_ctr.F;
    erd/erd__jacobi.inc;
    erd/erd__sppp_pcgto_block.f;
    erd/erd__2d_coefficients.f;
    erd/erd__memory_csgto.f;
    erd/erd__normalize_cartesian.f;
    erd/erd__set_derv_abcd.f;
    erd/erd__derv_csgto.f;
    erd/erd__gener_eri_derv_batch.f;
    erd/erd__pppp_pcgto_block.f;
    erd/erd__derv_int2d_to_abcd.f;
    erd/erd__print_batch.f;
    erd/erd__2d_abcd_integrals.f;
    erd/erd__atom_int2d_to_e0f0.f;
    erd/erd__rys_1_roots_weights.f;
    erd/erd__ctr_2nd_half_update.f;
    erd/erd__hrr_matrix.f;
    erd/erd__int2d_to_e000.f;
    erd/erd__memory_1111_csgto.f;
    erd/erd__2d_pcd_integrals.f;
    erd/erd__e0f0_def_blocks.f;
    erd/erd__2d_pq_integrals.f;
    erd/erd__derv_int2d_to_e000.f;
    erd/erd__sssp_pcgto_block.f;
    erd/erd__ftable.inc;
    erd/erd__cartesian_norms.f;
    erd/erd__hrr_transform.f;
    erd/erd__gener_eri_batch.f;
    erd/erd__derv_int2d_to_a000.f;
    erd/erd__ctr_4index_block.f;
    erd/erd__ctr_2nd_half_new.f;
    erd/erd__hrr_step.f;
    erd/erd__transpose_batch.f;
    erd/erd__tuning.inc;
    erd/erd__derv_int2d_to_e0cd.f;
    erd/erd__int2d_to_e0f0.f;
    erd/erd__map_ijkl_to_ikjl.f;
    erd/erd__derv_pcgto_block.f;
    erd/erd__rys_5_roots_weights.f;
    erd/erd__memory_eri_batch.f;
    erd/erd__derv_int2d_to_0000.f;
    erd/erd__csgto.f;
    erd/erd__set_ij_kl_pairs.f;
    erd/erd__derv_int2d_to_e0c0.f;
    erd/erd__xyz_to_ry_abcd.f;
    erd/erd__dsqmin_line_segments.f;
    erd/erd__rys_4_roots_weights.f;
    erd/erd__rys_roots_weights.f;
    erd/erd__2d_atom_coefficients.f;
    erd/erd__set_abcd.f;
    erd/erd__move_ry.f;
    erd/erd__1111_csgto.f;
    oed/oed__cartesian_norms.f;
    oed/oed__ctr_2index_block.f;
    oed/oed__ctr_2index_reorder.f;
    oed/oed__ctr_3index_block.f;
    oed/oed__ctr_3index_reorder.f;
    oed/oed__ctr_pair_new.f;
    oed/oed__ctr_pair_update.f;
    oed/oed__ctr_rs_expand.f;
    oed/oed__ctr_single_new.f;
    oed/oed__ctr_single_update.f;
    oed/oed__dsqmin_line_segments.f;
    oed/oed__ftable.inc;
    oed/oed__gener_kin_batch.f;
    oed/oed__gener_kin_derv_batch.f;
    oed/oed__gener_nai_batch.f;
    oed/oed__gener_nai_derv_batch.f;
    oed/oed__gener_ovl3c_batch.f;
    oed/oed__gener_ovl_batch.f;
    oed/oed__gener_ovl_derv_batch.f;
    oed/oed__gener_xyz_batch.f;
    oed/oed__gener_xyz_derv_batch.f;
    oed/oed__hrr_matrix.f;
    oed/oed__hrr_step.f;
    oed/oed__hrr_transform.f;
    oed/oed__jacobi.inc;
    oed/oed__kin_1d_derv_integrals.f;
    oed/oed__kin_1d_integrals.f;
    oed/oed__kin_ab_def_blocks.f;
    oed/oed__kin_ab_pcgto_block.f;
    oed/oed__kin_csgto.f;
    oed/oed__kin_derv_csgto.f;
    oed/oed__kin_derv_def_blocks.f;
    oed/oed__kin_derv_int1d_to_00.f;
    oed/oed__kin_derv_int1d_to_a0.f;
    oed/oed__kin_derv_int1d_to_ab.f;
    oed/oed__kin_derv_pcgto_block.f;
    oed/oed__kin_int1d_to_a0.f;
    oed/oed__kin_int1d_to_ab.f;
    oed/oed__kin_prepare_ctr.f;
    oed/oed__kin_set_ab.f;
    oed/oed__kin_set_derv_ab.f;
    oed/oed__kin_set_derv_sequence.f;
    oed/oed__kin_set_ij_pairs.f;
    oed/oed__map_ijkl_to_ikjl.f;
    oed/oed__memory_kin_batch.f;
    oed/oed__memory_kin_csgto.f;
    oed/oed__memory_kin_derv_batch.f;
    oed/oed__memory_kin_derv_csgto.f;
    oed/oed__memory_nai_batch.f;
    oed/oed__memory_nai_csgto.f;
    oed/oed__memory_nai_derv_batch.f;
    oed/oed__memory_nai_derv_csgto.f;
    oed/oed__memory_ovl3c_batch.f;
    oed/oed__memory_ovl3c_csgto.f;
    oed/oed__memory_ovl_batch.f;
    oed/oed__memory_ovl_csgto.f;
    oed/oed__memory_ovl_derv_batch.f;
    oed/oed__memory_ovl_derv_csgto.f;
    oed/oed__move_ry.f;
    oed/oed__nai_1d_ab_integrals.f;
    oed/oed__nai_1d_cenderv_integrals.f;
    oed/oed__nai_1d_coefficients.f;
    oed/oed__nai_1d_p_integrals.f;
    oed/oed__nai_1d_shderv_integrals.f;
    oed/oed__nai_csgto.f;
    oed/oed__nai_derv_2cen_pcgto_block.f;
    oed/oed__nai_derv_3cen_pcgto_block.f;
    oed/oed__nai_derv_csgto.f;
    oed/oed__nai_derv_def_blocks.f;
    oed/oed__nai_derv_int1d_to_00.f;
    oed/oed__nai_derv_int1d_to_a0.f;
    oed/oed__nai_derv_int1d_to_ab.f;
    oed/oed__nai_e0_def_blocks.f;
    oed/oed__nai_e0_pcgto_block.f;
    oed/oed__nai_int1d_to_e0.f;
    oed/oed__nai_prepare_ctr.F;
    oed/oed__nai_set_ab.f;
    oed/oed__nai_set_derv_ab.f;
    oed/oed__nai_set_derv_ijc_triples.f;
    oed/oed__nai_set_ijc_triples.f;
    oed/oed__normalize_cartesian.f;
    oed/oed__ovl_1d_ab_integrals.f;
    oed/oed__ovl_1d_derv_integrals.f;
    oed/oed__ovl_1d_integrals.f;
    oed/oed__ovl3c_csgto.f;
    oed/oed__ovl3c_f00_def_blocks.f;
    oed/oed__ovl3c_f00_pcgto_block.f;
    oed/oed__ovl3c_prepare_ctr.F;
    oed/oed__ovl3c_set_abc.f;
    oed/oed__ovl3c_set_ijk.f;
    oed/oed__ovl3c_set_ijk_triples.f;
    oed/oed__ovl_csgto.f;
    oed/oed__ovl_derv_csgto.f;
    oed/oed__ovl_derv_def_blocks.f;
    oed/oed__ovl_derv_int1d_to_00.f;
    oed/oed__ovl_derv_int1d_to_a0.f;
    oed/oed__ovl_derv_int1d_to_ab.f;
    oed/oed__ovl_derv_pcgto_block.f;
    oed/oed__ovl_e0_def_blocks.f;
    oed/oed__ovl_e0_pcgto_block.f;
    oed/oed__ovl_int1d_to_e0.f;
    oed/oed__ovl_prepare_ctr.F;
    oed/oed__ovl_set_ab.f;
    oed/oed__ovl_set_derv_ab.f;
    oed/oed__ovl_set_derv_sequence.f;
    oed/oed__ovl_set_ij_pairs.f;
    oed/oed__print_2ind_batch.f;
    oed/oed__print_batch.f;
    oed/oed__rys_1_roots_weights.f;
    oed/oed__rys_2_roots_weights.f;
    oed/oed__rys_3_roots_weights.f;
    oed/oed__rys_4_roots_weights.f;
    oed/oed__rys_5_roots_weights.f;
    oed/oed__rys_roots_weights.f;
    oed/oed__rys_x_roots_weights.f;
    oed/oed__spherical_transform.f;
    oed/oed__transpose_batch.f;
    oed/oed__tuning.inc;
    oed/oed__xyz_1d_ab_integrals.f;
    oed/oed__xyz_1d_derv_integrals.f;
    oed/oed__xyz_1d_integrals.f;
    oed/oed__xyz_1d_mom_ab_integrals.f;
    oed/oed__xyz_1d_ovl_mom_ab_integrals.f;
    oed/oed__xyz_csgto.f;
    oed/oed__xyz_derv_csgto.f;
    oed/oed__xyz_derv_def_blocks.f;
    oed/oed__xyz_derv_int1d_to_00.f;
    oed/oed__xyz_derv_int1d_to_a0.f;
    oed/oed__xyz_derv_int1d_to_ab.f;
    oed/oed__xyz_derv_pcgto_block.f;
    oed/oed__xyz_e0_def_blocks.f;
    oed/oed__xyz_e0_pcgto_block.f;
    oed/oed__xyz_init_00_ints.f;
    oed/oed__xyz_init_ovrlp.f;
    oed/oed__xyz_int1d_to_e0.f;
    oed/oed__xyz_mom_integrals.f;
    oed/oed__xyz_set_ab.f;
    oed/oed__xyz_set_derv_ab.f;
    oed/oed__xyz_set_derv_sequence.f;
    oed/oed__xyz_to_ry_abc.f;
    oed/oed__xyz_to_ry_ab.f;
    oed/oed__xyz_to_ry_matrix.f;
    ecp/izero.F;
    ecp/dzero.F;
    ecp/a4_ecp_basis_init.F;
    ecp/a4_ecp_init.F;
    ecp/a4_ecp_main.F;
    ecp/a4_ecp_grdint_main.F;
    ecp/a4_ecpgrd_int.F;
    ecp/factorial.F;
    ecp/factorialo.F;
    ecp/factorialo.F;
    ecp/dfactorial.F;
    ecp/make_ztab.F;
    ecp/make_xyz.F;
    ecp/make_ftab.F;
    ecp/binomial_coefs.F;
    ecp/a4_ecp_int_driver.F;
    ecp/a4_ecp_grdint_driver.F;
    ecp/ecp_int_4prim.F;
    ecp/ecp_grdint_4prim.F;
    ecp/get_center.F;
    ecp/ecp_int_typ1.F;
    ecp/ecp_int_typ2.F;
    ecp/ecp_rad_int_typ1.F;
    ecp/ecp_ang_int_typ1.F;
    ecp/radint_recur.F;
    ecp/make_bc_cacb_xyz.F;
    ecp/screen_ang_typ1.F;
    ecp/make_res.F;
    ecp/ang_int.F;
    ecp/ecp_rad_int_typ2.F;
    ecp/ecp_ang_int_typ2.F;
    ecp/sps.F;
    ecp/gpwm.F;
    ecp/bess.F;
    ecp/ecp_ang_int2.F;
    ecp/make_bc_pq_xyz.F;
    ecp/screen_ang_typ2.F;
    ecp/ecp_int_4shell.F;
    ecp/ecp_int.F;
    ecp/ecp_grdint.F;
    ecp/oedecp__xyz_to_ry_ab.F;
    ecp/oedecp__xyz_to_ry_matrix.F;
    ecp/qcomp_38D.F;
    ecp/qcomp_38D_odd.F;
    ecp/qcomp.F;
    ecp/qcomp_sps.F;
    ecp/qpasy.F;
    ecp/transp.F;
    ecp/dcopy.F)


set(SRCS 
    special_instructions.h;
    special_instructions.cpp;
    ${QM_SOURCE_FILES})

include_directories(    
    ./;
    erd;
    oed;
    ecp;
    direct_integral;
    ${CMAKE_SOURCE_DIR}/sia/src/;
    ${CMAKE_SOURCE_DIR}/sia/src/tensor_algebra;
    ${CMAKE_SOURCE_DIR}/sia/src/core;
    ${CMAKE_SOURCE_DIR}/sia/src/setup;
    ${CMAKE_SOURCE_DIR}/sia/src/worker;
    ${CMAKE_SOURCE_DIR}/sia/src/static_data;
    ${CMAKE_SOURCE_DIR}/sia/src/dynamic_data;
    ${CMAKE_SOURCE_DIR}/sia/src/mpi;
    ${CMAKE_SOURCE_DIR}/sia/src/cuda)

add_library(acessuperinstructions ${SRCS})


